test/programs/good/check-terms-precedence/let_sugar_multiple_followed_by_classic_controlled_gate_with_term.lq
fun :: Qbit
fun = |var1, var2| <- term1 ; with [ t ] ctrl [ 0b0 ] gate H
